@@ -31,6 +31,7 @@ Arkanes from #wxwidgets [who wanted nothing more than his handle here]
 
 Jorgen Cederlof (http://www.lysator.liu.se/~jc)
   Lots of help on localisation issues, plus patches to jmdlx
+  AAJM patch to work as a screensaver within screen
 
 Aidan Burns, http://www.geocities.com/aidanjburns/
   All the math related to random site generation.
