@@ -5,7 +5,7 @@ INSTALLDIR=/usr/local/games/jugglemaster/
 # If you have it, point this at the directory you built it in,
 #  and set HAVE_FFMPEG to 1. Tested with 0.4.9-pre1
 FFMPEG_PREFIX=/home/chunky/extras/ffmpeg
-HAVE_FFMPEG=0
+#HAVE_FFMPEG=1
 
 
 # You shouldn't have to edit anything below this line
